--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>jason tsay</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" type="image/jpg" href="./jtavatar.png"/>
+    <link rel="shortcut icon" type="image/ico" href="./favicon.ico"/>
 
     
   </head>
