--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>jason tsay</h2>
     <p>my friends say that i'm bad for their wallets</p>
     - <a href="https://instagram.com/jasontsay">photos</a><br> 
-    - <a href="https://www.instagram.com/material.journal">more photos</a><br> 
-    - <a href="https://materialjournal.com">material journal</a>
+    - <a href="https://www.instagram.com/material.journal">photos of objects</a><br> 
+    - <a href="https://materialjournal.com">words about objects</a>
   </body>
 </html>
