--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
   <body>
     <h2>jason tsay</h2>
-    <p>my friends say that i'm bad for their wallets</p>
+    <p>i spend a lot of time thinking about keyboards, cameras, kicks, and cars</p>
     - <a href="https://instagram.com/jasontsay">photos</a><br> 
-    - <a href="https://www.instagram.com/material.journal">photos of objects</a><br> 
-    - <a href="https://materialjournal.com">words about objects</a>
+    - <a href="https://www.instagram.com/material.journal">more photos</a><br> 
+    - <a href="https://materialjournal.com">material journal</a>
   </body>
 </html>
