--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <h2>jason tsay</h2>
-    <p>i spend a lot of time thinking about keyboards, cameras, kicks, and cars</p>
+    <p>i spend a lot of time thinking about watches, cameras, cars, keyboards, and kicks</p>
     - <a href="https://instagram.com/jasontsay">photos</a><br> 
     - <a href="https://www.instagram.com/material.journal">more photos</a><br> 
     - <a href="https://materialjournal.com">material journal</a>
