--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 
   <body>
     <h2>jason tsay</h2>
-    <p>i spend a lot of time thinking about watches, cameras, cars, keyboards, and kicks</p>
-    - <a href="https://instagram.com/jasontsay">photos</a><br> 
-    - <a href="https://www.instagram.com/material.journal">more photos</a><br> 
+    <p>i spend a lot of time thinking about nice things</p>
+    - <a href="https://www.tiktok.com/@jasontsay">tiktok</a><br> 
+    - <a href="https://www.instagram.com/thejasontsay">instagram (reels)</a><br> 
+    - <a href="https://instagram.com/jasontsay">instagram (photos)</a><br> 
     - <a href="https://materialjournal.com">material journal</a>
   </body>
 </html>
