--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
       <h2>contact</h2>
       <ul>
         <li><a href="mailto:jasontsay@me.com">email</a></li>
+
+      <h2>sponsored</h2>
+      <ul>
+        <li><a href="https://shorturl.at/jEFJG">esr iphone 17 pro case (IPI7ESRBF for 10% OFF)</a></li>
       </ul>
     </main>
   </body>
