--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
       <h2>sponsored</h2>
       <ul>
-        <li> <a href="https://shorturl.at/jEFJG">esr iphone 17 pro case</a> (IPI7ESRBF for 10% OFF)</li>
+        <li><a href="https://shorturl.at/jEFJG">esr iphone 17 pro case</a>&nbsp;(IPI7ESRBF for 10% OFF)</li>
       </ul>
     </main>
   </body>
