--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
       <h2>sponsored</h2>
       <ul>
-        <li><a href="https://shorturl.at/jEFJG">esr iphone 17 pro case</a> (10% off w/ IPI7ESRBF)</li>
+        <li><a href="https://shorturl.at/jEFJG">esr iphone 17 pro case (10% off w/ IPI7ESRBF)</a></li>
       </ul>
     </main>
   </body>
