--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
       <ul>
         <li><a href="mailto:jasontsay@me.com">email</a></li>
 
-      
+      <h2>sponsored</h2>
+      <ul>
+        <li><a href="https://bit.ly/499PqjV">moft iphone 17 pro case (10% off w/ code JASON)</a></li>
+      </ul>
     </main>
   </body>
 </html>
