--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
         <li>
           <a href="https://www.tiktok.com/@jasontsay">tiktok</a>
           <span class="separator">/</span>
-          <a href="https://www.instagram.com/thejasontsay">instagram</a>
+          <a href="https://www.instagram.com/thejasontsay/reels">instagram</a>
           <span class="separator">/</span>
           <a href="https://www.youtube.com/@jasontsay">youtube</a>
         </li>
-        <li><a href="https://instagram.com/wristaficionado">wrist aficionado</a></li>
+        <li><a href="https://instagram.com/wristaficionado/reels">wrist aficionado</a></li>
       </ul>
 
       <h2>before</h2>
